--- a/config.example.yaml
+++ b/config.example.yaml
@@ -4,7 +4,8 @@ db:
   updateCacheDelay: 60s
   bigRequestTimeout: 5s
 server:
-  port: 80
+  auctionPort: 80
+  stitchingPort: 81
   timeout: 4s
   idleTimeout: 60s
 stitching:
